# poly_address_find

./: .dockerignore  .gitignore  pyproject.toml
config/: leader_scoring_policy.json
deploy/: env.example  install.sh
docs/: critical_review_2026-06-10.md  github_activity_probe.md  nautilus_paper_driven_upgrade.md  polywhale_nautilus_synthesis.md  production_robot_framework.md  research_pipeline_architecture.md  research_scope_assessment.md
scripts/: build_candidate_review_queue.py  import_candidate_addresses.py  rank_wallets.py  scrape_polydata.py
tests/: test_activity_discovery.py  test_activity_ingestor.py  test_api_rate_limit.py  test_backup_integrity.py  test_cli_discovery_scope.py  test_copy_graph.py  test_copyability_evidence.py  test_copyability_truth.py  test_curated_candidates.py  test_current_elite.py  test_db_connections.py  test_deploy_files.py  test_discovery_funnel_e2e.py  test_eligibility_repair.py  test_evidence_archive.py  test_evidence_backfill.py  test_evidence_compact.py  test_evidence_promotion.py  test_evidence_prune.py  test_evidence_readiness.py  test_execution_preflight.py  test_feature_materializer.py  test_gamma_ingestor.py  test_hygiene_fail_closed.py  test_l6_validation.py  test_l6_validation_pipeline.py  test_leader_publish.py  test_leaderboard_discovery.py  test_maintenance.py  test_nas_wallet_funnel_deploy.py  test_paper_observer_outcomes.py  test_paper_portfolio.py  test_paper_quote.py  test_paper_runner.py  test_pipeline_audit.py  test_pipeline_cycle.py  test_pipeline_smoothness.py  test_pipeline_v2.py  test_pm_robot_broker.py  (+32 more)
(+231 files in other folders)
