[project]
name = "polymarket-copy-robot"
version = "0.1.0"
description = "Paper-driven Polymarket wallet discovery, scoring, and research evaluation system."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pm-robot = "pm_robot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pm_robot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
